# vllm-musa

./: Makefile  README.md  pyproject.toml
tests/: __init__.py  conftest.py  test_mtml.py  test_musa.py  test_patches.py
vllm_musa_platform/: __init__.py  mtml.py  musa.py
vllm_musa_platform/patches/: README.md  __init__.py  vllm__attention__ops__triton_unified_attention.patch.py  vllm__v1__worker__gpu_worker.patch.py  vllm__worker__worker.patch.py
