[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-musa"
version = "0.1.1"
description = "vLLM platform plugin for Moore Threads MUSA GPUs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "vLLM Community"},
]
keywords = ["vllm", "musa", "moore-threads", "llm", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "vllm",
    "torch==2.7.1",  # Pinned: torch_musa requires exactly 2.7.1
    "torchada>=0.1.9",
    "mthreads-ml-py>=2.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "isort",
    "black",
    "build",
    "twine",
]

[project.entry-points."vllm.platform_plugins"]
musa = "vllm_musa_platform:musa_platform_plugin"

[project.urls]
Homepage = "https://github.com/vllm-project/vllm"
Repository = "https://github.com/vllm-project/vllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["vllm_musa_platform*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["vllm_musa_platform"]
skip_gitignore = true

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
